# AP2_Ex1

./: .gitignore  AP2_Ex1.sln  CMakeLists.txt  DLLmaybe.sln  README.md
AP2_Ex1/: AP2_Ex1.csproj  App.xaml  ApplicationSettings.cs  Client.cs  ControlBarViewModel.cs  FlightDatabase.cs  GraphsModel.cs  GraphsPanelViewModel.cs  IDatabase.cs  IModel.cs  MainWindow.xaml  MainWindow.xaml.cs  ModelImplementation.cs  StartWindow.xaml  StartWindow.xaml.cs  SteeringViewModel.cs  dataViewModel.cs  flightGearModel.cs  flightModel.cs  packages.config  videoViewModel.cs
AP2_Ex1/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
AP2_Ex1/controls/: Compass.xaml  Compass.xaml.cs  ControlBarView.xaml  ControlBarView.xaml.cs  ExceptionDot.xaml  ExceptionDot.xaml.cs  Graph.xaml  Graph.xaml.cs  GraphsPanel.xaml  GraphsPanel.xaml.cs  Stick.xaml  Stick.xaml.cs  speedClock.xaml  speedClock.xaml.cs
CsTest/: CsTest.csproj  Program.cs
CsTest/Properties/: AssemblyInfo.cs
CsharpDLL/: CsharpDLL.cpp  CsharpDLL.h  CsharpDLL.vcxproj  CsharpDLL.vcxproj.filters  cpp.hint
CsharpTest/: CsharpTest.csproj
DLLmaybe/: AnomalyDetector.h  CMakeLists.txt  DLLmaybe.vcxproj  DLLmaybe.vcxproj.filters  Entity.cpp  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  minCircle.cpp  minCircle.h  timeseries.h
DLLmaybe/mingw/DLLmaybe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DLLmaybe.lastbuildstate
WpfAnomalyControl/: AnomalyGraph.xaml  AnomalyGraph.xaml.cs  WpfAnomalyControl.csproj
WpfAnomalyControl/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Wrapper/: AnomalyDetector.cpp  AnomalyDetector.h  AnomalyReport.h  CMakeLists.txt  Entity.cpp  Entity.h  HybridAnomalyDetector.h  ManagedObject.h  SimpleAnomalyDetector.h  TimeSeries.cpp  TimeSeries.h  Wrapper.vcxproj  Wrapper.vcxproj.filters
